# WebUtils

./: CMakeLists.txt  README.md  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
include/: logging.hpp
scripts/: copy.ps1
shared/: DownloaderUtility.hpp  RatelimitedDispatcher.hpp  Response.hpp  WebUtils.hpp  _config.h
src/: DownloaderUtility.cpp  RatelimitedDispatcher.cpp  WebUtils.cpp  main.cpp
